[gd_scene load_steps=6 format=3 uid="uid://b0c42ujfj0pdo"]

[ext_resource type="Texture2D" uid="uid://dv01jwy5bfth2" path="res://assets/textures/ui/mapSelector.png" id="1_a8248"]
[ext_resource type="Script" uid="uid://c0l776v3u72r6" path="res://assets/scenes/ui/mapOverview/map_selection_cursor.gd" id="1_r5eb4"]

[sub_resource type="Gradient" id="Gradient_r5eb4"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_dsbe6"]
gradient = SubResource("Gradient_r5eb4")

[sub_resource type="SphereShape3D" id="SphereShape3D_a8248"]
radius = 0.7964561

[node name="mapSelectionMarker" type="Node3D"]
script = ExtResource("1_r5eb4")

[node name="markerIcon" type="Sprite3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, -2.1855694e-08, -0.5, 0, 0.5, -2.1855694e-08, 0, 0, 0)
modulate = Color(0.99999994, 0.174173, 0.12721539, 1)
shaded = true
texture = ExtResource("1_a8248")

[node name="markerIcon2" type="Sprite3D" parent="."]
transform = Transform3D(-2.054435e-08, -4.3711392e-08, -1, -0.47, -4.371139e-08, 4.371139e-08, -2.0544354e-08, 1, -4.371139e-08, 0, 0.5877041, 0)
texture = SubResource("GradientTexture1D_dsbe6")

[node name="area3d" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="collisionShape3d" type="CollisionShape3D" parent="area3d"]
shape = SubResource("SphereShape3D_a8248")

[connection signal="area_entered" from="area3d" to="." method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="area3d" to="." method="_on_area_3d_area_exited"]
